syntax = "proto3";

option java_package = "grpc";

service BilleteraService {
    rpc Pago(PagoProductoDTO) returns (ResUsuarioDTO);
    rpc CargarSaldo(CargaSaldoDTO) returns (ResUsuarioDTO);
}

message ServerResponse{
    int32 cod=1;
    string msg=2;
}

message PagoProductoDTO{
    int32 idUsuario=1;
	int32 idProducto=2;
}

message CargaSaldoDTO{
    int32 idUsuario=1;
    int32 saldo=2;
}

message UsuarioDTO{
    int32 idUsuario = 1;
    string nombre = 2;
    string apellido = 3;
    int32 dni = 4;
    string email = 5;
    string usuario = 6;
    string clave = 7;
    double saldoBilletera = 8;
}

message ResUsuarioDTO{
    UsuarioDTO usuario = 1;
    ServerResponse response = 2;
}